src/objects/PBS_Shared_Learning_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result_Text__c</fullName>
        <formula>TEXT( Evaluation_Result__c )</formula>
        <label>Evaluation Result Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result__c</fullName>
        <label>Evaluation Result</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Score__c</fullName>
        <label>Evaluation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Times_Taken__c</fullName>
        <label>Evaluation Times Taken</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Published_Learning_Version_Decision__c</fullName>
        <label>Last Published Learning Version Decision</label>
        <picklist>
            <picklistValues>
                <fullName>New version taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep using old version</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Published_Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published Learning Version</label>
        <referenceTo>PBS_Learning_Version__c</referenceTo>
        <relationshipName>Shared_LP_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment_Last_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment Last Update</label>
        <referenceTo>PBS_Learning_Assignment__c</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Version</label>
        <referenceTo>PBS_Learning_Version__c</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning</label>
        <referenceTo>PBS_Learning__c</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_Percentage__c</fullName>
        <label>Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_Text__c</fullName>
        <formula>TEXT( Progress__c )</formula>
        <label>Progress Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PBS_Shared Learning Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>User__c</columns>
        <columns>Learning__c</columns>
        <columns>Learning_Assignment_Last_Update__c</columns>
        <columns>Learning_Version__c</columns>
        <columns>Progress__c</columns>
        <columns>Progress_Percentage__c</columns>
        <columns>Last_Published_Learning_Version__c</columns>
        <columns>Last_Published_Learning_Version_Decision__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLA-{0000000}</displayFormat>
        <label>Shared Learning Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_Shared Learning Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>